--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "A micro-library for making round bois",
   "version": "0.0.2",
   "author": "Oliver Turner",
+  "repository": {
+    "url": "git@github.com:oliverturner/absolute-unit.git"
+  },
   "keywords": [
     "boi",
     "math",
